--- a/styles/home.css
+++ b/styles/home.css
@@ -1,4 +1,6 @@
 /* add home page styles here */
+
+
 * {
     box-sizing: border-box;
     font-family: fantasy;
@@ -6,9 +8,16 @@
 }
 
 body{
+--orange-yellow-crayola: hsla(42, 85%, 68%, 1);
+--mindaro: hsla(69, 100%, 76%, 1);
+--medium-champagne: hsla(52, 100%, 85%, 1);
+--tea-green: hsla(102, 90%, 88%, 1);
+--black-coffee: hsla(17, 15%, 18%, 1);
+
     margin: 0;
-    background-color: forestgreen;
+    background-color: var(--tea-green);
     text-align: center;
+    
     
 }
 
@@ -16,9 +25,14 @@ header {
     display: flex;
     justify-content: center;
     align-items: center;
-    background: darkgoldenrod;
-    color: black; 
+    background: var(--black-coffee);
+    color: var(--orange-yellow-crayola); 
     font-size: 25px;
+}
+
+footer {
+    background-color: var(--black-coffee);
+    color: var(--orange-yellow-crayola);
 }
 
 img {
