--- a/styles/style.css
+++ b/styles/style.css
@@ -4,3 +4,9 @@ img {
     height: 250px;
     width: 150px;
 }
+
+main {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
