--- a/Cart-Files/Cart.css
+++ b/Cart-Files/Cart.css
@@ -1,5 +1,35 @@
+body{
+    margin: 0;
+    background-color: var(--tea-green);
+    text-align: center;
+    --orange-yellow-crayola: hsla(42, 85%, 68%, 1);
+    --mindaro: hsla(69, 100%, 76%, 1);
+    --medium-champagne: hsla(52, 100%, 85%, 1);
+    --tea-green: hsla(102, 90%, 88%, 1);
+    --black-coffee: hsla(17, 15%, 18%, 1);
+    
+}
 
+main {
+    display: grid;
+    grid-template-rows: 1fr;
+    grid-template-rows: 9fr, 1fr;
+    width: 90%;
+    height: 100%;
+    justify-content: center;
+}
 
+header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background: var(--black-coffee) ;
+    color: var(--orange-yellow-crayola); 
+    font-size: 25px;
+    width: 100%;
+    padding-left: 2%;
+
+}
 
 #orderButton {
     margin-top: 30px;
@@ -15,16 +45,25 @@
 }
 
 table {
-   display: flex;
-  flex-direction: column;
- flex-wrap: wrap;
+    grid-column-start: 1;
+    border-collapse: collapse;
+    height: 100%;
+    width: 844px;
+    text-align: center;
+}
+
+table, tbody, tr {
+    border: 2px solid black;
+} 
+
+tr:nth-child(even) {
+    background-color: var(--mindaro);
 }
 
 thead {
     background: orangered;
     color: white;
-    display: flex;
-    justify-content: space-around;
+    
 }
 
 table th, table td {
@@ -38,8 +77,7 @@ table th, table td {
 
 tbody {
     background: white;
-    display: flex;
-    justify-content: space-around;
+
 }
 
 
@@ -51,8 +89,6 @@ tbody td {
 tfoot {
     background: #999;
     color: white;
-    display: flex;
-    justify-content: space-around;
 }
 
 * {
@@ -61,23 +97,12 @@ tfoot {
     text-decoration: none;
 }
 
-body{
-    margin: 0;
-    background-color: var(--tea-green);
-    text-align: center;
-    --orange-yellow-crayola: hsla(42, 85%, 68%, 1);
-    --mindaro: hsla(69, 100%, 76%, 1);
-    --medium-champagne: hsla(52, 100%, 85%, 1);
-    --tea-green: hsla(102, 90%, 88%, 1);
-    --black-coffee: hsla(17, 15%, 18%, 1);
-    
+p {
+    grid-column-start: 1;
+    grid-row-start: 2;
+    text-align: right;
 }
 
-header {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: var(--black-coffee) ;
-    color: var(--orange-yellow-crayola); 
-    font-size: 25px;
+nav {
+    padding-right: 2%;
 }
